fixed image loading on projects.html

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <p>Play as an unassuming square, defeating people that get in your way with sheer luck.
             Level up, make money, and collect dice to turn the odds in your favor on this strange journey!</p>
             <div class="img-container">
-                <img src="images/dice_preview.jpg" alt="">
+                <img src="images/dice_preview.JPG" alt="">
             </div>
             <div class="link-container">
                 <a href="#">Not Available</a>
@@ -47,7 +47,7 @@
             <p>The app tells you what percentage of posts on a certain subreddit mention some topic or keyword.
                 It also serves as a bare bones Reddit viewer.</p>
             <div class="img-container">
-                <img src="images/curious_preview.jpg" alt="">
+                <img src="images/curious_preview.JPG" alt="">
             </div>
             <div class="link-container">
                 <a href="#">Not Available</a>
