github link works now

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="projects.html">Projects</a>
         <a href="#" target="_blank">Resume</a>
         <a href="https://www.linkedin.com/in/leo-chung-3165241b2/" target="_blank">LinkedIn</a>
-        <a href="#" target="_blank">Github</a>
+        <a href="https://github.com/bloopsoup" target="_blank">Github</a>
         <a href="mailto:leochungus@berkeley.edu">Email</a>
     </nav>
 </main>
