added r-curious link

--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,8 @@
                 <img src="images/curious_preview.JPG" alt="">
             </div>
             <div class="link-container">
-                <a href="#">Not Available</a>
+                <a href="https://bloopsoup.github.io/r-curious/">Live Site</a>
+                <a href="https://github.com/bloopsoup/r-curious">Github Repo</a>
             </div>
         </section>
     </div>
