added a graphic to the title screen

--- a/index.html
+++ b/index.html
@@ -14,17 +14,22 @@
 
 <body>
 <main>
-    <header>
-        <h1>Leo Chung</h1>
-        <img src="images/grounding.png" alt="" class="ground-scale">
-    </header>
-    <nav>
-        <a href="projects.html">Projects</a>
-        <a href="#" target="_blank">Resume</a>
-        <a href="https://www.linkedin.com/in/leo-chung-3165241b2/" target="_blank">LinkedIn</a>
-        <a href="https://github.com/bloopsoup" target="_blank">Github</a>
-        <a href="mailto:leochungus@berkeley.edu">Email</a>
-    </nav>
+    <div class="menu">
+        <header>
+            <h1>Leo Chung</h1>
+            <img src="images/grounding.svg" alt="" class="ground-scale">
+        </header>
+        <nav>
+            <a href="projects.html">Projects</a>
+            <a href="#" target="_blank">Resume</a>
+            <a href="https://www.linkedin.com/in/leo-chung-3165241b2/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/bloopsoup" target="_blank">Github</a>
+            <a href="mailto:leochungus@berkeley.edu">Email</a>
+        </nav>
+    </div>
+    <div class="graphic">
+        <img src="images/calm.svg" alt="" class="graphic-scale">
+    </div>
 </main>
 </body>
 </html>
