added svg + added random img on load at title

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link href="styles/style.css" rel="stylesheet"/>
     <link href="styles/index.css" rel="stylesheet"/>
+    <script src="scripts/main.js" defer></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         </nav>
     </div>
     <div class="graphic">
-        <img src="images/calm.svg" alt="" class="graphic-scale">
+        <img src="" alt="" class="graphic-scale" id="random-display">
     </div>
 </main>
 </body>
