updated styling and added links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link href="styles/style.css" rel="stylesheet"/>
     <link href="styles/index.css" rel="stylesheet"/>
-    <script src="scripts/main.js" defer></script>
+    <script src="scripts/image_selector.js" defer></script>
 </head>
 
 <body>
@@ -18,18 +18,18 @@
     <div class="menu">
         <header>
             <h1>Leo Chung</h1>
-            <img src="images/grounding.svg" alt="" class="ground-scale">
+            <img src="images/grounding.svg" alt="" class="ground">
         </header>
         <nav>
             <a href="projects.html">Projects</a>
-            <a href="#" target="_blank">Resume</a>
+            <a href="https://www.linkedin.com/in/leo-chung-3165241b2/overlay/1635500689453/single-media-viewer/" target="_blank">Resume</a>
             <a href="https://www.linkedin.com/in/leo-chung-3165241b2/" target="_blank">LinkedIn</a>
             <a href="https://github.com/bloopsoup" target="_blank">Github</a>
             <a href="mailto:leochungus@berkeley.edu">Email</a>
         </nav>
     </div>
-    <div class="graphic">
-        <img src="" alt="" class="graphic-scale" id="random-display">
+    <div class="graphic-box">
+        <img src="" alt="" class="graphic" id="random-display">
     </div>
 </main>
 </body>
