--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link href="styles/style.css" rel="stylesheet"/>
     <link href="styles/projects.css" rel="stylesheet"/>
-    <script src="scripts/main.js"></script>
 </head>
 
 <body>
@@ -25,34 +24,20 @@
         </header>
 
         <section>
-            <hr>
-            <h2>DANGERDice: A Fair Game, Sometimes</h2>
-            <p>A rogue-like game inspired by TinyDiceDungeons. Game was written in Python (pygame),
-                graphics were made in Photoshop, and music was made with FL Studio. Only Windows is
-            supported currently.</p>
-            <p>Play as an unassuming square, defeating people that get in your way with sheer luck.
-            Level up, make money, and collect dice to turn the odds in your favor on this strange journey!</p>
+            <div class="txt-container">
+                <hr>
+                <h2>DANGERDice: A Fair Game, Sometimes</h2>
+                <p>A rogue-like game inspired by TinyDiceDungeons. Game engine was written in Python which
+                    supports either pygame and pyglet (albeit pyglet is slower). Graphics were made in Photoshop
+                    and music was made with FL Studio. Only Windows is supported currently.</p>
+                <p>Play as an unassuming square, defeating people that get in your way with sheer luck.
+                    Level up, make money, and collect dice to turn the odds in your favor on this strange journey!</p>
+                <div class="link-container">
+                    <a href="https://github.com/bloopsoup/DANGERdice">Github Repo and Release</a>
+                </div>
+            </div>
             <div class="img-container">
                 <img src="images/dice_preview.JPG" alt="">
-            </div>
-            <div class="link-container">
-                <a href="#">Not Available</a>
-            </div>
-        </section>
-
-        <section>
-            <hr>
-            <h2>r/curious</h2>
-            <p>A simple web application written with vanilla CSS and Javascript with the goal of learning
-                more about using APIs.</p>
-            <p>The app tells you what percentage of posts on a certain subreddit mention some topic or keyword.
-                It also serves as a bare bones Reddit viewer.</p>
-            <div class="img-container">
-                <img src="images/curious_preview.JPG" alt="">
-            </div>
-            <div class="link-container">
-                <a href="https://bloopsoup.github.io/r-curious/">Live Site</a>
-                <a href="https://github.com/bloopsoup/r-curious">Github Repo</a>
             </div>
         </section>
     </div>
