--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link href="styles/style.css" rel="stylesheet"/>
     <link href="styles/index.css" rel="stylesheet"/>
-    <script src="scripts/image_selector.js" defer></script>
+    <script src="scripts/carousel.js" defer></script>
 </head>
 
 <body>
@@ -29,7 +29,10 @@
         </nav>
     </div>
     <div class="graphic-box">
-        <img src="" alt="" class="graphic" id="random-display">
+        <div class="graphic-track">
+            <img class="graphic" style="order:1" src="" alt="">
+            <img class="graphic" style="order:2" src="" alt="">
+        </div>
     </div>
 </main>
 </body>
