added project entry

--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,23 @@
                 <img src="images/dice_preview.JPG" alt="">
             </div>
         </section>
+
+        <section>
+            <div class="txt-container">
+                <hr>
+                <h2>BOGGERS.js</h2>
+                <p>A lightweight Javascript engine meant for creating 2D games that can run easily on most web browsers.
+                   Unlike the previous Python engine which was made to run DANGERDice, this engine features a collision
+                   system and a tile map, allowing for an easier and more generalizable experience for creating levels.</p>
+                <p>The repository leads to the engine source code as well as a game that was implemented using the engine.</p>
+                <div class="link-container">
+                    <a href="https://github.com/bloopsoup/S-Place">Github Repo</a>
+                </div>
+            </div>
+            <div class="img-container">
+                <img src="images/boggers.svg" alt="">
+            </div>
+        </section>
     </div>
 </main>
 </body>
