replaced boggers logo

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="img-container">
-                <img src="images/boggers.svg" alt="">
+                <img src="images/boggers.png" alt="">
             </div>
         </section>
     </div>
