fixed links and minor formatting changes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8"/>
     <meta author="Leo Chung"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Leo Chung
-    </title>
+    <title>Leo Chung</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link href="styles/style.css" rel="stylesheet"/>
     <link href="styles/index.css" rel="stylesheet"/>
@@ -22,7 +20,7 @@
         </header>
         <nav>
             <a href="projects.html">Projects</a>
-            <a href="https://www.linkedin.com/in/leo-chung-3165241b2/overlay/1635500689453/single-media-viewer/" target="_blank">Resume</a>
+            <a href="https://www.linkedin.com/in/leo-chung-3165241b2/overlay/1635508668692/single-media-viewer/" target="_blank">Resume</a>
             <a href="https://www.linkedin.com/in/leo-chung-3165241b2/" target="_blank">LinkedIn</a>
             <a href="https://github.com/bloopsoup" target="_blank">Github</a>
             <a href="mailto:leochungus@berkeley.edu">Email</a>
