--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8"/>
     <meta author="Leo Chung"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Projects
-    </title>
+    <title>Projects</title>
     <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     <link href="styles/style.css" rel="stylesheet"/>
     <link href="styles/projects.css" rel="stylesheet"/>
@@ -14,14 +12,10 @@
 
 <body>
 <main>
-    <nav>
-        <a href="index.html">Home</a>
-    </nav>
+    <nav><a href="index.html">Home</a></nav>
 
     <div class="main-column">
-        <header>
-            <h1>Projects</h1>
-        </header>
+        <header><h1>Projects</h1></header>
 
         <section>
             <div class="txt-container">
@@ -33,12 +27,10 @@
                 <p>Play as an unassuming square, defeating people that get in your way with sheer luck.
                     Level up, make money, and collect dice to turn the odds in your favor on this strange journey!</p>
                 <div class="link-container">
-                    <a href="https://github.com/bloopsoup/DANGERdice">Github Repo and Release</a>
+                    <a href="https://github.com/bloopsoup/DANGERdice">Github</a>
                 </div>
             </div>
-            <div class="img-container">
-                <img src="images/dice_preview.JPG" alt="">
-            </div>
+            <div class="img-container"><img src="images/dice_preview.JPG" alt=""></div>
         </section>
 
         <section>
@@ -48,14 +40,13 @@
                 <p>A lightweight Javascript engine meant for creating 2D games that can run easily on most web browsers.
                    Unlike the previous Python engine which was made to run DANGERDice, this engine features a collision
                    system and a tile map, allowing for an easier and more generalizable experience for creating levels.</p>
-                <p>The repository leads to the engine source code as well as a game that was implemented using the engine.</p>
+                <p>The source code is located on Github and the live site showcases a game demo using this engine.</p>
                 <div class="link-container">
-                    <a href="https://github.com/bloopsoup/S-Place">Github Repo</a>
+                    <a href="https://github.com/bloopsoup/S-Place">Github</a>
+                    <a href="https://bloopsoup.github.io/S-Place">Live Site</a>
                 </div>
             </div>
-            <div class="img-container">
-                <img src="images/boggers.png" alt="">
-            </div>
+            <div class="img-container"><img src="images/boggers.png" alt=""></div>
         </section>
     </div>
 </main>
