--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,7 @@
 
         <section>
             <div class="txt-container">
-                <hr>
-                <h2>DANGERDice: A Fair Game, Sometimes</h2>
+                <h2>DANGERDice</h2>
                 <p>A rogue-like game inspired by TinyDiceDungeons. Game engine was written in Python which
                     supports either pygame and pyglet (albeit pyglet is slower). Graphics were made in Photoshop
                     and music was made with FL Studio. Only Windows is supported currently.</p>
@@ -28,6 +27,7 @@
                     Level up, make money, and collect dice to turn the odds in your favor on this strange journey!</p>
                 <div class="link-container">
                     <a href="https://github.com/bloopsoup/DANGERdice">Github</a>
+                    <a href="https://bloopsoup.github.io/DANGERDice">Live Site</a>
                 </div>
             </div>
             <div class="img-container"><img src="images/dice_preview.JPG" alt=""></div>
@@ -35,7 +35,6 @@
 
         <section>
             <div class="txt-container">
-                <hr>
                 <h2>BOGGERS.js</h2>
                 <p>A lightweight Javascript engine meant for creating 2D games that can run easily on most web browsers.
                    Unlike the previous Python engine which was made to run DANGERDice, this engine features a collision
