fixed broken link

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                     Level up, make money, and collect dice to turn the odds in your favor on this strange journey!</p>
                 <div class="link-container">
                     <a href="https://github.com/bloopsoup/DANGERdice">Github</a>
-                    <a href="https://bloopsoup.github.io/DANGERDice">Live Site</a>
+                    <a href="https://bloopsoup.github.io/DANGERdice">Live Site</a>
                 </div>
             </div>
             <div class="img-container"><img src="images/dice_preview.JPG" alt=""></div>
